--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <div class="mdc-layout-grid__cell--span-3">
                 <div class="mdc-card">
                     <div class="mdc-card__primary-action" tabindex="0">
-                        <img style='width: 100%;' src="testimg.png" alt="test img" />
+                        <img style='width: 100%;' src="images/testimg.png" alt="test img" />
                     </div>
                     <div class="mdc-card__actions">
                         <div class="mdc-card__action-icons">
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
